force-app/main/default/objects/NEPA_Template_Catalog__mdt/NEPA_Template_Catalog__mdt.object-meta.xml
<CustomObject>
    <description>Agency Template Exchange catalog. Maps each ActionPlanTemplate to its review type, sector category, and agency. Drives the nepaTemplateCatalog LWC browse UI. One record per APT. Add records here to publish new templates — no code changes needed.</description>
    <label>NEPA Template Catalog</label>
    <pluralLabel>NEPA Template Catalogs</pluralLabel>
</CustomObject>