force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Publishing Agency</label>
    <type>Text</type>
    <length>50</length>
    <description>Federal agency that published this template. Examples: BLM, USFS, USACE, USFWS, BIA. Used for catalog filtering.</description>
</CustomField>