force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/APT_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Unique_Name__c</fullName>
    <label>APT Developer Name</label>
    <type>Text</type>
    <length>80</length>
    <description>DeveloperName of the ActionPlanTemplate this catalog entry links to. Used by NepaTemplateCatalogController.installTemplate() to launch the correct APT.</description>
</CustomField>