force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>512</length>
    <description>Human-readable description of what this template covers and when to use it. Displayed in the catalog card view.</description>
</CustomField>