force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>When false, the template is hidden from the catalog browse UI. Use to soft-delete deprecated templates without removing CMT records.</description>
</CustomField>