force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <label>Package Version</label>
    <type>Text</type>
    <length>20</length>
    <description>Semantic version of the template package (e.g. 1.0.0). Used for future package-based exchange; informational in this sprint.</description>
</CustomField>