force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Text</type>
    <length>10</length>
    <description>NEPA review type this template applies to. Values: CE, EA, EIS, All, WO (Work Order / field survey).</description>
</CustomField>