force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Text</type>
    <length>100</length>
    <description>Industry/resource sector this template covers. Examples: Energy - Oil/Gas, Transportation - Land, Water Resources. Used for catalog filtering.</description>
</CustomField>