force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Template_Category__c.field-meta.xml
<CustomField>
    <fullName>Template_Category__c</fullName>
    <label>Template Category</label>
    <type>Text</type>
    <length>50</length>
    <description>Category grouping for catalog display. Values: Process Milestones, CE Sector, EA Sector, EIS Sector, Field Survey.</description>
</CustomField>