force-app/main/default/objects/NEPA_Template_Catalog__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <type>Text</type>
    <length>128</length>
    <description>Display name shown in the template catalog browse UI.</description>
</CustomField>